crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_comments.snap
---
source: crates/djls-templates/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "<!-- HTML comment -->"
  line: 1
  start: 0
- token_type: Newline
  line: 2
  start: 21
- token_type:
    Comment:
      - Django comment
      - "{#"
      - "#}"
  line: 2
  start: 22
- token_type: Newline
  line: 3
  start: 42
- token_type:
    Text: "<script>"
  line: 3
  start: 43
- token_type: Newline
  line: 4
  start: 51
- token_type:
    Whitespace: 4
  line: 4
  start: 52
- token_type:
    Text: // JS single line comment
  line: 4
  start: 56
- token_type: Newline
  line: 5
  start: 81
- token_type:
    Whitespace: 4
  line: 5
  start: 82
- token_type:
    Text: /* JS multi-line
  line: 5
  start: 86
- token_type: Newline
  line: 6
  start: 102
- token_type:
    Whitespace: 7
  line: 6
  start: 103
- token_type:
    Text: comment */
  line: 6
  start: 110
- token_type: Newline
  line: 7
  start: 120
- token_type:
    Text: "</script>"
  line: 7
  start: 121
- token_type: Newline
  line: 8
  start: 130
- token_type:
    Text: "<style>"
  line: 8
  start: 131
- token_type: Newline
  line: 9
  start: 138
- token_type:
    Whitespace: 4
  line: 9
  start: 139
- token_type:
    Text: /* CSS comment */
  line: 9
  start: 143
- token_type: Newline
  line: 10
  start: 160
- token_type:
    Text: "</style>"
  line: 10
  start: 161
- token_type: Eof
  line: 10
  start: ~
