crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_django_block.snap
---
source: crates/djls-templates/src/lexer.rs
expression: snapshot
---
- Block:
    content: if user.is_staff
    line: 1
    start: 3
- Text:
    content: Admin
    line: 1
    start: 22
- Block:
    content: else
    line: 1
    start: 30
- Text:
    content: User
    line: 1
    start: 37
- Block:
    content: endif
    line: 1
    start: 44
- Eof:
    line: 1
