crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_django_error_recovery.snap
---
source: crates/djls-templates/src/lexer.rs
expression: tokens
---
- token_type:
    Error: " user.name {% if condition %} {# comment"
  line: 1
  start: 0
- token_type: Eof
  line: 1
  start: ~
