crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_django_variable.snap
---
source: crates/djls-templates/src/lexer.rs
expression: snapshot
---
- Variable:
    content: "user.name|default:\"Anonymous\"|title"
    line: 1
    start: 3
- Eof:
    line: 1
