crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_html.snap
---
source: crates/djls-templates/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "<div class=\"container\" id=\"main\" disabled></div>"
  line: 1
  start: 0
- token_type: Eof
  line: 1
  start: ~
