crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_script.snap
---
source: crates/djls-templates/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "<script type=\"text/javascript\">"
  line: 1
  start: 0
- token_type: Newline
  line: 2
  start: 31
- token_type:
    Whitespace: 4
  line: 2
  start: 32
- token_type:
    Text: // Single line comment
  line: 2
  start: 36
- token_type: Newline
  line: 3
  start: 58
- token_type:
    Whitespace: 4
  line: 3
  start: 59
- token_type:
    Text: const x = 1;
  line: 3
  start: 63
- token_type: Newline
  line: 4
  start: 75
- token_type:
    Whitespace: 4
  line: 4
  start: 76
- token_type:
    Text: /* Multi-line
  line: 4
  start: 80
- token_type: Newline
  line: 5
  start: 93
- token_type:
    Whitespace: 7
  line: 5
  start: 94
- token_type:
    Text: comment */
  line: 5
  start: 101
- token_type: Newline
  line: 6
  start: 111
- token_type:
    Whitespace: 4
  line: 6
  start: 112
- token_type:
    Text: console.log(x);
  line: 6
  start: 116
- token_type: Newline
  line: 7
  start: 131
- token_type:
    Text: "</script>"
  line: 7
  start: 132
- token_type: Eof
  line: 7
  start: ~
