crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_stray_closers.snap
---
source: crates/djls-templates/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "}} %} #} normal text "
  line: 1
  start: 0
- token_type:
    DjangoVariable: valid
  line: 1
  start: 21
- token_type: Eof
  line: 1
  start: ~
