crates/djls-templates/src/snapshots/djls_templates__lexer__tests__tokenize_unclosed_style.snap
---
source: crates/djls-templates/src/lexer.rs
expression: snapshot
---
- Text:
    content: "<style>body { color: blue; "
    line: 1
    start: 0
- Eof:
    line: 1
